--- a/community/server/src/docs/ops/server-installation.asciidoc
+++ b/community/server/src/docs/ops/server-installation.asciidoc
@@ -118,7 +118,7 @@ If you install Neo4j using the Mac installer and already have an existing instan
 === Running Neo4j from the Terminal ===
 
 The server can be started in the background from the terminal with the command `neo4j start`, and then stopped again with `neo4j stop`.
-The server can also be started in the foreground with `neo4j console` -- then it's log output will be printed to the terminal.
+The server can also be started in the foreground with `neo4j console` -- then its log output will be printed to the terminal.
 
 The `neo4j-shell` command can be used to interact with Neo4j from the command line using Cypher. It will automatically connect to any
 server that is running on localhost with the default port, otherwise it will show a help message. You can alternatively start the
