Fix failing test due to message text change

--- a/community/bolt/src/docs/dev/examples.asciidoc
+++ b/community/bolt/src/docs/dev/examples.asciidoc
@@ -25,16 +25,16 @@ Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credenti
     6A 00 00
 
 Server: FAILURE { "code": "Neo.ClientError.Security.CredentialsExpired",
-                  "message": "The credentials have expired and needs to be updated."}
+                  "message": "The credentials have expired and need to be updated."}
 
-    00 74 B1 7F  A2 84 63 6F  64 65 D0 2B  4E 65 6F 2E
+    00 73 B1 7F  A2 84 63 6F  64 65 D0 2B  4E 65 6F 2E
     43 6C 69 65  6E 74 45 72  72 6F 72 2E  53 65 63 75
     72 69 74 79  2E 43 72 65  64 65 6E 74  69 61 6C 73
     45 78 70 69  72 65 64 87  6D 65 73 73  61 67 65 D0
-    35 54 68 65  20 63 72 65  64 65 6E 74  69 61 6C 73
+    34 54 68 65  20 63 72 65  64 65 6E 74  69 61 6C 73
     20 68 61 76  65 20 65 78  70 69 72 65  64 20 61 6E
-    64 20 6E 65  65 64 73 20  74 6F 20 62  65 20 75 70
-    64 61 74 65  64 2E 00 00
+    64 20 6E 65  65 64 20 74  6F 20 62 65  20 75 70 64
+    61 74 65 64  2E 00 00
 
 Server: <disconnect>
 Client: <connect>
