--- a/community/bolt/src/docs/dev/examples.asciidoc
+++ b/community/bolt/src/docs/dev/examples.asciidoc
@@ -42,15 +42,14 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "neo4j", "new-credentials": "secret"}
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "neo4j", "new_credentials": "secret"}
 
     00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
     30 A4 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
     70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
     63 72 65 64  65 6E 74 69  61 6C 73 85  6E 65 6F 34
-    6A 8F 00 16  6E 65 77 2D  63 72 65 64  65 6E 74 69
+    6A 8F 00 16  6E 65 77 5F  63 72 65 64  65 6E 74 69
     61 6C 73 86  73 65 63 72  65 74 00 00
-
 
 Server: SUCCESS { }
 
