Add properties function

--- a/manual/cypher/cypher-docs/src/docs/dev/ql/functions/index.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/ql/functions/index.asciidoc
@@ -72,6 +72,8 @@ include::startnode.asciidoc[]
 
 include::endnode.asciidoc[]
 
+include::properties.asciidoc[]
+
 include::toint.asciidoc[]
 
 include::tofloat.asciidoc[]
