--- a/manual/cypher/cypher-docs/src/docs/dev/general/compatibility.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/general/compatibility.asciidoc
@@ -9,7 +9,7 @@ New concepts are being added and old ones changed to fit into new possibilities.
 To guard you from having to keep up with our syntax changes, Neo4j allows you to use an older parser, but still gain speed from new optimizations.
 
 There are two ways you can select which parser to use.
-You can configure your database with the configuration parameter `cypher_parser_version`, and enter which parser you'd like to use (see <<cypher-versions>>)).
+You can configure your database with the configuration parameter `cypher.default_language_version`, and enter which parser you'd like to use (see <<cypher-versions>>)).
 Any Cypher query that doesn't explicitly say anything else, will get the parser you have configured, or the latest parser if none is configured.
 
 The other way is on a query by query basis.
