--- a/manual/cypher/cypher-docs/src/docs/dev/query-tuning.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/query-tuning.asciidoc
@@ -32,7 +32,7 @@ This planner uses the statistics service in Neo4j to assign cost to alternative 
 While this should lead to superior execution plans in most cases, it is still under development.
 
 By default, Neo4j {neo4j-version} will use the cost planner for some queries, but not all.
-You can force it to use a specific planner by using the `query.planner.version` configuration setting (see <<config_dbms.cypher.planner>>), or by prepending your query with `CYPHER planner=cost` or `CYPHER planner=rule`.
+You can force it to use a specific planner by using the `cypher.planner` configuration setting (see <<config_cypher.planner>>), or by prepending your query with `CYPHER planner=cost` or `CYPHER planner=rule`.
 Neo4j might still not use the planner you selected -- not all queries are solvable by the cost planner at this point.
 
 You can see which planner was used by looking at the execution plan.
