--- a/community/server/src/docs/ops/server-performance.asciidoc
+++ b/community/server/src/docs/ops/server-performance.asciidoc
@@ -21,10 +21,10 @@ Edit the following properties:
 .neo4j-wrapper.conf JVM tuning properties
 [options="header", cols="<m,<"]
 |====================
-| Property Name             | Meaning
-| wrapper.java.initmemory   | initial heap size (in MB)
-| wrapper.java.maxmemory    | maximum heap size (in MB)
-| wrapper.java.additional   | additional literal JVM parameter
+| Property Name                 | Meaning
+| dbms.memory.heap.initial_size | initial heap size (in MB)
+| dbms.memory.heap.max_size     | maximum heap size (in MB)
+| wrapper.java.additional       | additional literal JVM parameter
 |====================
 
 For more information on the tuning properties, see <<performance-guide>>.
