--- a/community/kernel/src/docs/ops/io-examples.asciidoc
+++ b/community/kernel/src/docs/ops/io-examples.asciidoc
@@ -8,7 +8,7 @@
 * The page cache is sometimes called _low level cache_, _file system cache_ or _file buffer cache_.
 * It caches the Neo4j data as stored on the durable media.
 * The default configuration of the cache relies on heuristics and assumes that the machine is dedicated to running Neo4j, so you might want to tune it yourself to get the most out of the available memory.
-* There is just one setting for the file buffer cache: `dbms.pagecache.memory` -- it specifies how much memory Neo4j is allowed to use for this cache.
+* There is just one setting for the file buffer cache: `dbms.memory.pagecache.size` -- it specifies how much memory Neo4j is allowed to use for this cache.
 ****
 
 Each file in the Neo4j store is accessed through the Neo4j page cache, when reading from, or writing to, the store files.
@@ -23,7 +23,7 @@ Other processes may thus not use more than what is available after the configure
 Make sure that your system is configured such that it will never need to swap.
 If memory belonging to the Neo4j process gets swapped out, it can lead to considerable performance degradation.
 
-The amount of memory available to the page cache is configured using the `dbms.pagecache.memory` setting.
+The amount of memory available to the page cache is configured using the `dbms.memory.pagecache.size` setting.
 With that setting, you specify the number of bytes available to the page cache, e.g. `150m` og `4g`.
 The default page memory setting is 50% of the machines memory, after subtracting the memory that is reserved for the Java heap.
 
@@ -36,8 +36,8 @@ Obviously the store files will grow as you add more nodes, relationships and pro
 
 [options="header",cols="<35m,<30,<35"]
 |========================================================
-| Parameter                 | Possible values   | Effect
-| dbms.pagecache.memory     |
+| Parameter                  | Possible values   | Effect
+| dbms.memory.pagecache.size |
   The maximum amount of memory to use for the page cache, either in bytes, or greater byte-like units, such as `100m`
   for 100 mega-bytes, or `4g` for 4 giga-bytes. |
   The amount of memory to use for mapping the store files, in a unit of bytes.
@@ -67,7 +67,7 @@ The important thing is that the page cache has enough memory to work with, that 
 
 [source]
 ----
-dbms.pagecache.memory=4g
+dbms.memory.pagecache.size=4g
 ----
 
 The configuration above will more or less fit the entire graph in memory.
