--- a/enterprise/ha/src/docs/dev/arbiter.asciidoc
+++ b/enterprise/ha/src/docs/dev/arbiter.asciidoc
@@ -10,7 +10,7 @@ They can be regarded as cluster participants in that their role is to take part 
 That makes possible a scenario where you have a cluster of 2 Neo4j database instances and an additional arbiter instance and still enjoy tolerance of a single failure of either of the 3 instances.
 
 Arbiter instances are configured in _neo4j.conf_ using the same settings as standard Neo4j HA members.
-The instance is configured to be an arbiter by setting the `org.neo4j.server.database.mode` option to `ARBITER`.
+The instance is configured to be an arbiter by setting the `dbms.mode` option to `ARBITER`.
 Settings that are not cluster specific are of course ignored, so you can easily start up an arbiter instance in place of a properly configured Neo4j instance.
 
 To start the arbiter instance, run +neo4j+ as normal:
